--- a/index.html
+++ b/index.html
@@ -49,14 +49,17 @@
 
                             <div class="search__box-form">
 
-                                <svg class="search__icon" width="17" height="20" viewBox="0 0 17 20" fill="none"
+                                <a class="search__icon" href="#">
+
+                                    <svg  width="17" height="20" viewBox="0 0 17 20" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="M14.0793 7.52083C14.0793 11.2704 11.0854 14.2917 7.41463 14.2917C3.74388 14.2917 0.75 11.2704 0.75 7.52083C0.75 3.77131 3.74388 0.75 7.41463 0.75C11.0854 0.75 14.0793 3.77131 14.0793 7.52083Z"
                                         stroke="#393939" stroke-width="1.5" />
                                     <path d="M10.9268 12.6667L15.9999 19.0001" stroke="#393939" stroke-width="1.5" />
-                                </svg>
-
+                                    </svg>
+                                </a>
+                                
                                 <input class="search__input" type="text" placeholder="Поиск">
 
 
