--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="./css/style.css">
     <title data-lang="title-lang">KMF - Демеу</title>
 </head>
@@ -11,6 +13,7 @@
 <body>
     <header class="header__top">
         <nav class="header__top-nav">
+
 
             <div class="logo">
                 <a class="logo__link" href="#">
@@ -22,13 +25,13 @@
 
                 <div class="header__menu">
 
-                    <ul class="list__menu">
+                    <ul class="list__menu" id="list__menu">
 
                         <li class="list__menu-item">
-                            <a class="list__item-link" href="#" data-lang="nav-menu-1">Пройти тест</a>
+                            <a class="list__item-link" href="#" data-lang="nav-menu-0">Пройти тест</a>
                         </li>
                         <li class="list__menu-item">
-                            <a class="list__item-link" href="#" data-lang="nav-menu-2">Подать заявку на тренинг</a>
+                            <a class="list__item-link" href="#" data-lang="nav-menu-1">Подать заявку на тренинг</a>
                         </li>
 
                     </ul>
@@ -55,8 +58,8 @@
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
                                             d="M14.0793 7.52083C14.0793 11.2704 11.0854 14.2917 7.41463 14.2917C3.74388 14.2917 0.75 11.2704 0.75 7.52083C0.75 3.77131 3.74388 0.75 7.41463 0.75C11.0854 0.75 14.0793 3.77131 14.0793 7.52083Z"
-                                            stroke="#393939" stroke-width="1.5" />
-                                        <path d="M10.9268 12.6667L15.9999 19.0001" stroke="#393939"
+                                            stroke="currentColor" stroke-width="1.5" />
+                                        <path d="M10.9268 12.6667L15.9999 19.0001" stroke="currentColor"
                                             stroke-width="1.5" />
                                     </svg>
                                 </a>
@@ -67,8 +70,8 @@
                                 <button type="button" class="search__button-input">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18"
                                         fill="none">
-                                        <path d="M1 17.2634L17.2635 0.999971" stroke="#393939" />
-                                        <path d="M17.6455 17.2634L1.38205 0.999971" stroke="#393939" />
+                                        <path d="M1 17.2634L17.2635 0.999971" stroke="currentColor" />
+                                        <path d="M17.6455 17.2634L1.38205 0.999971" stroke="currentColor" />
                                     </svg>
                                 </button>
 
@@ -81,6 +84,40 @@
 
                     </div>
 
+                </div>
+                <div class="header__poppup">
+
+                    <div class="header__poppup-top">
+                        <div class="burger__top-caption">
+                            <p class="burger__caption-text">Меню</p>
+                        </div>
+                    </div>
+
+                    <div class="burger__container">
+                        <ul class="burger__list">
+                            <li class="burger__list-item">
+                                <a class="burger__item-link" href="#">Главная</a>
+                            </li>
+                            <li class="burger__list-item">
+                                <a class="burger__item-link" href="#">О фонде</a>
+                            </li>
+                            <li class="burger__list-item">
+                                <a class="burger__item-link" href="#">Новости</a>
+                            </li>
+                            <li class="burger__list-item">
+                                <a class="burger__item-link" href="#">Фотогаллерия</a>
+                            </li>
+                            <li class="burger__list-item">
+                                <a class="burger__item-link" href="#">Мероприятия фонда</a>
+                            </li>
+                            <li class="burger__list-item">
+                                <a class="burger__item-link" href="#">Финансовая грамотность</a>
+                            </li>
+                            <li class="burger__list-item">
+                                <a class="burger__item-link" href="#">Для бизнеса</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
                 <div class="header__action">
@@ -109,6 +146,8 @@
 
             </div>
 
+
+
         </nav>
 
         <div class="action__burger">
@@ -118,6 +157,7 @@
         </div>
 
     </header>
+
 
     <script src="./js/script.js"></script>
 </body>
